dots/.config/waybar/style.css
@import url("../../.cache/wal/colors-waybar.css");

/********************************************************************************/
/*                                                                              */
/*  This config has been written by angelobdev                                  */
/*  It should be used in a properly configured Hyprland environment.            */
/*                                                                              */
/*  Look at the full configuration here: https://github.com/angelobdev/dotfiles */
/*                                                                              */
/*  The project (as well as this config) goes under the GNU GPLv3 LICENSE.      */
/*                                                                              */
/********************************************************************************/

* {
  border: none;
  border-radius: 0px;
  font-family: "JetBrains Mono", FontAwesome, sans-serif;
  font-size: 13px;
  min-height: 0;
  background: transparent;
}

window#waybar {
  background: transparent;
  padding: 0;
  margin: 0;
  color: @color15;
}

window#waybar.hidden {
  opacity: 0.5;
}
window#waybar.empty {
  background-color: transparent;
}

window#waybar.empty #window {
  padding: 0px;
  border: 0px;
  background-color: transparent;
}

tooltip {
  background:
  /* Background */ linear-gradient(@background, @background)
      padding-box,
    /* Border */ linear-gradient(to right, @color3, @color4, @color5, @color6)
      border-box;

  border: 2px solid transparent;
  border-radius: 0.8em;

  color: @color15;
}

/* Modules Box */
.modules-left,
.modules-center,
.modules-right {
  background:
        /* Background */ linear-gradient(@background, @background)
      padding-box,
    /* Border */ linear-gradient(to right, @color3, @color4, @color5, @color6)
      border-box;

  border: 2px solid transparent;
  border-radius: 0.8em;

  margin: 5px 10px 0px 10px;
}

.modules-left {
  padding: 0px 5px 0px 2px;
}

.modules-center {
  padding: 0px 4px 0px 4px;
}

.modules-right {
  padding: 0px 4px 0px 5px;
}

/* ### PER-MODULE CUSTOMIZATIONS ### */

/* Workspaces */
#workspaces {
  margin: 2px 0px 2px 0px;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 0.4rem;
}

#workspaces button {
  background: transparent;
  color: @color8;

  padding: 0px 2px 0px 2px;
  margin: 0;
}

#workspaces button:hover {
  background: @color3;
  color: @color14;
}

#workspaces button.active {
  color: @color15;
}

/* UPower (Battery) */

#upower image {
  margin-right: 4px;
}

/* Tray */
#tray menu {
  background: @background;
  color: @color15;
}

/* 9) Logout (wlogout) */
#custom-powermenu {
  padding: 0px 6px 0px 2px;
}

